feat(loadtest): Sprint 4 — assertions, metrics integration, and percentile calculation